# AutoTestGenModule

./: README.md  pyproject.toml
src/: main.py
src/model/: train_qg.py
src/model/saved_model/checkpoint-32500/: model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
src/model/saved_model/checkpoint-32850/: model.safetensors  optimizer.pt  scheduler.pt  trainer_state.json
src/question/: router.py  service.py
src/static/: style.css
src/templates/: index.html
src/text_samples/: sample_biology_7.txt  sample_comp_science_6.txt  sample_economy_8.txt  sample_einstein_2.txt  sample_france_1.txt  sample_hawking_3.txt  sample_physics_5.txt  sample_tom_hanks_4.txt
src/utils/: t5.py
