[project]
name = "automatedtestcreationmodule"
version = "0.1.0"
description = ""
authors = [
    {name = "George"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "datasets (>=3.6.0,<4.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "accelerate (>=0.26.0,<0.27.0)",
    "spacy (>=3.5.0,<4.0.0)",
    "coreferee (>=1.4.1,<2.0.0)",
    "numpy (>=1.23.0,<2.0.0)",
    "thinc (>=8.0.0,<9.0.0)",
    "transformers (>=4.4.2,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "spacy-transformers (>=1.3.8,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
